# anime-dl

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  run.bat
fake_reflect/: Cargo.toml
fake_reflect/src/: lib.rs
src/: cli.rs  config.rs  errors.rs  m3u8.rs  main.rs  terminal.rs  types.rs  utils.rs
src/cmds/: dl.rs  mod.rs  print_cfg.rs  self_.rs  watch.rs
src/extractors/: goload.rs  mod.rs  streamsb.rs  vidstream.rs
src/providers/: animeonsen.rs  mod.rs  yugen.rs
